# kuri_usar

./: README.md  kuri_usar.rosinstall
kuri_usar_classification/: CMakeLists.txt  package.xml
kuri_usar_classification/launch/: test.launch
kuri_usar_classification/scripts/: CNN.py  Image.py  Read Me  data_collection.py
kuri_usar_mapping/: CMakeLists.txt  package.xml
kuri_usar_msgs/: CMakeLists.txt  package.xml
kuri_usar_msgs/msg/: ImageWithCommand.msg
kuri_usar_teleoperation/: CMakeLists.txt  package.xml
kuri_usar_teleoperation/include/: dataCollectionController.h  sarKeyTeleop.h
kuri_usar_teleoperation/launch/: 2D Localization Utilizing the Map.launch  2D Path Planning.launch  Constructing a Mapping Environment.launch  exploration_Demo.launch  key_teleop.launch  octomap.launch  r.launch  rtab.launch  rtab_p2.launch  rtab_pioneer.launch  test.launch  test1.launch  testFakeLaser.launch  view_launch.launch
kuri_usar_teleoperation/script/: keyboardControl.py  model.h5  model.json  uav_1.py  uav_1_pre_datac.py  vision_control.py
kuri_usar_teleoperation/src/: bridge.cpp  dataCollectionController.cpp  particle_filter_node.cpp  sarKeyTeleop.cpp
