<?xml version="1.0"?>
<package>
  <name>kuri_usar_classification</name>
  <version>1.0.0</version>
  <description>The kuri_usar_classification package</description>
  <maintainer email="reemashour1@gmail.com">Reem Ashour</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/kuri_usar_classification</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kuri_usar_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kuri_usar_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>



  <export>
  </export>
</package>
