<?xml version="1.0"?>
<package>
  <name>kuri_usar_teleoperation</name>
  <version>0.1.0</version>
  <description>The kuri_usar_teleoperation package</description>

  <maintainer email="reem.ashour@kustar.ac.ae">Reem Ashour</maintainer>
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <url type="website">https://github.com/kuri-kustar/kuri_usar</url> 


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
 <build_depend>hector_gazebo_thermal_camera</build_depend>
 <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
 <run_depend>hector_gazebo_thermal_camera</run_depend>

  <export>
  </export>
</package>
